# tim-gui

./: LICENSE  README.md  main.py  pyproject.toml  resources.qrc
tests/: test_tim_gui.py
tim_gui/: main.py
tim_gui/api/: __init__.py  models.py  utils.py
tim_gui/gui/: __init__.py  custom_widgets.py  utils.py  windows.py
