[tool.poetry]
name = "tim-gui"
version = "0.1.0"
description = ""
authors = ["LaBatata101 <labatata101@linuxmail.org>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = "^2.27.1"
PySide6 = "^6.3.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
tim = "tim_gui.main:main"
gui = "tim_gui.gui:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
